--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,10 +1,9 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<link rel="preconnect" as="script" 
-  href="https://www.googletagmanager.com/gtag/js?id=YOUR_TRACKING_ID">
-  
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JCSB0SBNQE"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', YOUR_TRACKING_ID);
+
+  gtag('config', 'G-JCSB0SBNQE');
 </script>
